# Halligalli-BossYang

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVOPS.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.server.json  vite.config.ts
.do/: app.yaml
.github/: dependabot.yml
.github/utils/: Taskfile.yaml  change-filters.yaml  check-health.mjs  check_health.py  classify-changes.rb  paired_release_manifest.py  (+22 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  generated-AGENTS.md
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/halligalli_api/: __init__.py  app.py  authority.py  export_openapi.py  observability.py  release-identity.json
apps/api/tests/: redis_test_case.py  test_authority.py  test_match_authority.py  test_multiseat_authority.py  test_observability.py  test_openapi.py  test_pubsub_projection.py  test_redis_adapter.py  test_release_identity.py  test_room_lifecycle.py  test_score_breakdown.py  test_shared_scoring_fixtures.py  test_transport.py  test_websocket_match.py
contracts/: README.md  openapi.json
docs/: prd-web-halligalli.md
public/: README.md  site.webmanifest
scripts/: deploy-azure-production-backend.sh  simulate-bell.mjs  simulate-bell.ts  validate-kubernetes-chart.ts
server/: GameEngine.js  GameEngine.ts  Room.js  Room.ts  health.js  health.ts  index.js  index.ts  package-lock.json  package.json
src/: App.jsx  App.tsx  main.tsx  styles.css
(+181 files in other folders)
