[project]
name = "halligalli-api"
version = "0.0.0"
description = "Future FastAPI owner for Halligalli multiplayer authority."
requires-python = ">=3.14,<3.15"
dependencies = [
  "fastapi>=0.139.0,<0.140.0",
  "redis>=8.0.1,<9",
  "uvicorn[standard]>=0.51.0,<0.52.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/halligalli_api"]
